# array-metrics-to-influxdb

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  array_metrics_to_influxdb_example.toml  docker-compose.yml  pyproject.toml  pyrightconfig.json  simple_grafana_dashboards.json  tox.ini
.github/workflows/: actions.yml  codeql-analysis.yml
src/array_metrics_to_influx/: __init__.py  cli.py  collector.py  collector_base.py  config.py  errors.py  influx.py  main.py  pure.py
