[tool.poetry]
name = "array-metrics-to-influx"
version = "1.1.1"
description = "Read performance metrics from a Pure FlashArray and write them to an InfluxDB."
authors = ["Tilman Lüttje <luettje@b1-systems.de>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
influxdb = "^5.3.1"
py-pure-client = "^1.16.0"
# Allows output of log messages as single JSON, your log-aggregator will thank
# you
structlog = "^21.1.0"
# Config parsing and validation made easy
pydantic = "^1.8.2"
# Required for TOML parsing
tomli = "^1.2.1"

[tool.poetry.dev-dependencies]
types-jwt = "^0.1.3"
isort = "^5.9.3"
black = "^21.7b0"
ipython = "^7.26.0"
types-requests = "^2.25.6"
mypy = "^0.910"
colorama = "^0.4.4"
flake8 = "^3.9.2"
codespell = "^2.1.0"
# required by mypy for report generation
lxml = "*"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
array-metrics-to-influxdb = 'array_metrics_to_influx.cli:array_metrics_to_influx'
array-metrics-to-influxdb-collectors = 'array_metrics_to_influx.cli:array_metrics_to_influx_collectors'

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module=[
  "pypureclient.flasharray",
  "pypureclient.flasharray.*",
  "pypureclient.responses"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module=[
  "influxdb",
  "influxdb.exceptions",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="IPython"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="structlog"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="requests.exceptions"
ignore_missing_imports = true

[tool.isort]
profile = "black"
